Support lower case configuration properties system environment names
Update `SystemEnvironmentPropertyMapper` to generate both mappings
in both the original case and upper case.

This restores the behavior of Spring Boot 3.4 where the system
environment could contain lowercase names.

Fixes gh-45741